# omastar

./: .gitignore  README.md  config.py  evaluate_features.py  generate_dashboard.py  pyproject.toml  run.py  serve.sh
.github/workflows/: deploy.yml
.kaggle/: kaggle.json
frontend/: app.js  dashboard_data.json  index.html  styles.css
src/data/: clean.py  load.py  team_season.py
src/features/: adjusted_efficiency.py  advanced.py  builder.py  coach.py  conference_strength.py  conference_tourney.py  efficiency.py  external.py  matchup.py  program_experience.py  seed.py  seed_matchup.py  trajectory.py
src/model/: evaluate.py  predict.py  shap_analysis.py  train.py  tuning.py
src/optimization/: optimizer.py  scoring.py
src/simulation/: bracket.py  monte_carlo.py  results.py
tests/: conftest.py  test_data.py  test_features.py  test_model.py  test_simulation.py
